force-app/main/default/objects/SBQQ__Quote__c/fields/AccountGovernance_Case_Opened__c.field-meta.xml
<CustomField>
    <fullName>AccountGovernance_Case_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check once an account governance type case has been created.
BIZ-47757</description>
    <label>AccountGovernance Case Opened</label>
    <type>Checkbox</type>
</CustomField>