force-app/main/default/objects/SBQQ__Quote__c/fields/ACV_Change_Year_1__c.field-meta.xml
<CustomField>
    <fullName>ACV_Change_Year_1__c</fullName>
    <description>BIZ-45146:This field is a summary of quote line ACV Change for Year 1.</description>
    <label>ACV Change (Year 1)</label>
    <summarizedField>SBQQ__QuoteLine__c.ACV_Change__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>