force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>created as a part of story BIZ-49002. 
To let user populate the manual user</description>
    <label>Additional Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesRbVB</relationshipName>
    <type>Lookup</type>
</CustomField>