force-app/main/default/objects/SBQQ__Quote__c/fields/Amend_Appl_Level__c.field-meta.xml
<CustomField>
    <fullName>Amend_Appl_Level__c</fullName>
    <label>Amend Appl Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>