force-app/main/default/objects/SBQQ__Quote__c/fields/Authorize_Signature__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Signature__c</fullName>
    <description>BIZ-43794</description>
    <formula>IF(
(Shipping_State_Province__c = TRUE) &amp;&amp; (Product_Line_Deployment_Count__c&gt; 0) &amp;&amp;(Include_Counter_Signature__c = False), TRUE, FALSE)</formula>
    <label>Authorize Signature</label>
    <type>Checkbox</type>
</CustomField>