force-app/main/default/objects/SBQQ__Quote__c/fields/AVA_SFCPQ__Entity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Entity_Use_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entity use codes indicate the reason for exemption.</description>
    <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
    <label>Entity/Use Code</label>
    <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>