force-app/main/default/objects/SBQQ__Quote__c/fields/AVA_SFCPQ__Inclusive_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Inclusive_Tax_Amount__c</fullName>
    <inlineHelpText>The total tax amount for line items that were indicated to have tax included in their totals.</inlineHelpText>
    <label>Inclusive Tax Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.AVA_SFCPQ__Inclusive_Tax_Amount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>