force-app/main/default/objects/SBQQ__Quote__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <description>Created as part of BIZ-50208</description>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>