force-app/main/default/objects/SBQQ__Quote__c/fields/Bundle_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product_Count__c</fullName>
    <label>Bundle Product Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.License_Product__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_is_Bundle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Code_Text__c</field>
        <operation>equals</operation>
        <value>BU-01408</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>