force-app/main/default/objects/SBQQ__Quote__c/fields/Cloud_Migration__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-47803</description>
    <label>Cloud Migration</label>
    <type>Checkbox</type>
</CustomField>