force-app/main/default/objects/SBQQ__Quote__c/fields/Co_Marketing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Co_Marketing_Agreement__c</fullName>
    <description>Created field for term &amp; conditions - BIZ-48165</description>
    <label>Co-Marketing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Do Not Use Name/Logo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>