force-app/main/default/objects/SBQQ__Quote__c/fields/Conflicts_Products__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Products__c</fullName>
    <label>Conflicts Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>equals</operation>
        <value>PIN-00056,PIN-00070,PIN-00584,PIN-00883,PIN-00884,PIN-00885, PIN-01492, PIN-01491</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>