force-app/main/default/objects/SBQQ__Quote__c/fields/Created_By_Permissionset__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Permissionset__c</fullName>
    <description>BIZ-45129</description>
    <formula>$Permission.Service_products_override</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Permissionset</label>
    <type>Checkbox</type>
</CustomField>