force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_Services_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_Services_Payment_Term__c</fullName>
    <description>Custom text field used to enter custom services payment terms if non standard terms are required.
Built according to user story BIZ-45112.</description>
    <label>Custom Services Payment Term</label>
    <type>TextArea</type>
</CustomField>