force-app/main/default/objects/SBQQ__Quote__c/fields/D_B_Related__c.field-meta.xml
<CustomField>
    <fullName>D_B_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated as part of story BIZ-49907</description>
    <label>D&amp;B Related</label>
    <type>Checkbox</type>
</CustomField>