force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Deal_Conversion__c</fullName>
    <description>Custom field built according to US# BIZ-47145</description>
    <formula>IF( Platform_Conversion_Count__c &gt; 0 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Conversion</label>
    <type>Checkbox</type>
</CustomField>