force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Issue_Notes__c</fullName>
    <label>Deal Issue Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>