force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Issues__c.field-meta.xml
<CustomField>
    <fullName>Deal_Issues__c</fullName>
    <label>Deal Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SBQQ__Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contract Length</fullName>
            </value>
            <value>
                <fullName>Custom Terms</fullName>
            </value>
            <value>
                <fullName>Effective Date</fullName>
            </value>
            <value>
                <fullName>Expiration Date</fullName>
            </value>
            <value>
                <fullName>Extended Term DLI</fullName>
            </value>
            <value>
                <fullName>Meter Type</fullName>
            </value>
            <value>
                <fullName>MSSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>ROR Expiration Date</fullName>
            </value>
            <value>
                <fullName>Services Hours</fullName>
            </value>
            <value>
                <fullName>Services - Other</fullName>
            </value>
            <value>
                <fullName>SFA Cap</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>