force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Justification__c.field-meta.xml
<CustomField>
    <fullName>Deal_Justification__c</fullName>
    <label>Deal Justification</label>
    <type>TextArea</type>
</CustomField>