force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>Custom Field created according to User story BIZ-45119.</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deal_Type</valueSetName>
    </valueSet>
</CustomField>