force-app/main/default/objects/SBQQ__Quote__c/fields/DealCloud_Prime__c.field-meta.xml
<CustomField>
    <fullName>DealCloud_Prime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DealCloud Prime T&amp;Cs</label>
    <type>Checkbox</type>
</CustomField>