force-app/main/default/objects/SBQQ__Quote__c/fields/Does_Not_Have_Software_Credits__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Have_Software_Credits__c</fullName>
    <formula>IF(
  Has_Discount_Products__c = TRUE,
  FALSE,
  TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Does Not Have Software Credits</label>
    <type>Checkbox</type>
</CustomField>