force-app/main/default/objects/SBQQ__Quote__c/fields/Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of  BIZ-49298 to capture URL parameters</description>
    <label>Existing Client</label>
    <type>Checkbox</type>
</CustomField>