force-app/main/default/objects/SBQQ__Quote__c/fields/Experience_Products__c.field-meta.xml
<CustomField>
    <fullName>Experience_Products__c</fullName>
    <label>Experience Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>equals</operation>
        <value>PIN-00830,PIN-00971,PIN-01017</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>