force-app/main/default/objects/SBQQ__Quote__c/fields/Expires_on_formula_for_allert__c.field-meta.xml
<CustomField>
    <fullName>Expires_on_formula_for_allert__c</fullName>
    <formula>IF(OR(SBQQ__ExpirationDate__c&lt;today(), TEXT(SBQQ__ExpirationDate__c)=null),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expires on formula for allert</label>
    <type>Checkbox</type>
</CustomField>