force-app/main/default/objects/SBQQ__Quote__c/fields/Extended_Initial_Term__c.field-meta.xml
<CustomField>
    <fullName>Extended_Initial_Term__c</fullName>
    <formula>IF(SBQQ__SubscriptionTerm__c&gt;12,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Initial Term?</label>
    <type>Checkbox</type>
</CustomField>