force-app/main/default/objects/SBQQ__Quote__c/fields/Extended_Term_and_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Extended_Term_and_Discounts__c</fullName>
    <formula>AND(
  Extended_Initial_Term__c,
  Has_Discount_Products__c
)</formula>
    <label>Extended Term and Discounts</label>
    <type>Checkbox</type>
</CustomField>