force-app/main/default/objects/SBQQ__Quote__c/fields/First_Segment_Months__c.field-meta.xml
<CustomField>
    <fullName>First_Segment_Months__c</fullName>
    <inlineHelpText>&apos;First invoice period (number of months)</inlineHelpText>
    <label>First Segment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>