force-app/main/default/objects/SBQQ__Quote__c/fields/First_Term_List_Price__c.field-meta.xml
<CustomField>
    <fullName>First_Term_List_Price__c</fullName>
    <label>First Term List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>