force-app/main/default/objects/SBQQ__Quote__c/fields/First_Term_Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>First_Term_Total_Spend__c</fullName>
    <label>First Term Total Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>