force-app/main/default/objects/SBQQ__Quote__c/fields/First_Year_Software_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Software_Net_Total__c</fullName>
    <description>BIZ-45146:This field is a summary of quote line group by Product Type Software and Segment index 1.</description>
    <label>First Year Software Net Total</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>